# docProcApi

./: .gitignore  Dockerfile  DocumentProcessing.postman_collection.json  README.md  pyproject.toml
core/api/: models.py  serializers.py  urls.py  views.py
core/api/migrations/: 0001_initial.py
core/core/: settings.py
core/tests/: test_image.py  test_pdf.py
core/utils/: file_handlers.py
