[project]
name = "docprocapi"
version = "0.1.0"
description = "Document Processing API - Django REST API for processing Images and PDFs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.4",
    "djangorestframework>=3.15.2",
    "numpy>=2.2.1",
    "pdf2image>=1.17.0",
    "pillow>=11.1.0",
    "pypdf2>=3.0.1",
    "pytest>=8.3.4",
    "pytest-django>=4.9.0",
]
